[package]
name = "bundles-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = "0.50.0"
shuttle-runtime = "0.50.0"
axum = "0.7.4"
tokio = {version = "1.43.0", features = ["full"]}
bundler = {git = "https://github.com/weaveVM/bundler", branch = "main"}
anyhow = "1.0.96"
dotenv = "0.15.0"
alloy = "0.11.1"
planetscale-driver = "0.5.1"
serde = "1.0.218"
serde_json = "1.0.139"
reqwest = "0.12.12"
hex = "0.4.3"
futures = "0.3.31"
